docs/api/qiskit/0.25/qiskit.providers.aer.library.SaveProbabilities.mdx
---
title: SaveProbabilities
description: API reference for qiskit.providers.aer.library.SaveProbabilities
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.library.SaveProbabilities
---

# qiskit.providers.aer.library.SaveProbabilities

<Class id="qiskit.providers.aer.library.SaveProbabilities" github="https://github.com/qiskit/qiskit-aer/tree/stable/0.8/qiskit/providers/aer/library/save_instructions/save_probabilities.py" signature="SaveProbabilities(num_qubits, label='probabilities', unnormalized=False, pershot=False, conditional=False)">
  Save measurement outcome probabilities vector.

  Instruction to save measurement probabilities vector.

  **Parameters**

  *   **num\_qubits** (*int*) – the number of qubits for the snapshot type.
  *   **label** (*str*) – the key for retrieving saved data from results.
  *   **unnormalized** (*bool*) – If True return save the unnormalized accumulated probabilities over all shots \[Default: False].
  *   **pershot** (*bool*) – if True save a list of probabilities for each shot of the simulation rather than the average over all shots \[Default: False].
  *   **conditional** (*bool*) – if True save the probabilities data conditional on the current classical register values \[Default: False].

  ### \_\_init\_\_

  <Function id="qiskit.providers.aer.library.SaveProbabilities.__init__" name="__init__" signature="__init__(num_qubits, label='probabilities', unnormalized=False, pershot=False, conditional=False)">
    Instruction to save measurement probabilities vector.

    **Parameters**

    *   **num\_qubits** (*int*) – the number of qubits for the snapshot type.
    *   **label** (*str*) – the key for retrieving saved data from results.
    *   **unnormalized** (*bool*) – If True return save the unnormalized accumulated probabilities over all shots \[Default: False].
    *   **pershot** (*bool*) – if True save a list of probabilities for each shot of the simulation rather than the average over all shots \[Default: False].
    *   **conditional** (*bool*) – if True save the probabilities data conditional on the current classical register values \[Default: False].
  </Function>

  ## Methods

  |                                                                                                                                                                                 |                                                                          |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.providers.aer.library.SaveProbabilities.__init__ "qiskit.providers.aer.library.SaveProbabilities.__init__")(num\_qubits\[, label, unnormalized, …])        | Instruction to save measurement probabilities vector.                    |
  | [`add_decomposition`](#qiskit.providers.aer.library.SaveProbabilities.add_decomposition "qiskit.providers.aer.library.SaveProbabilities.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.providers.aer.library.SaveProbabilities.assemble "qiskit.providers.aer.library.SaveProbabilities.assemble")()                                              | Return the QasmQobjInstruction for the intructions.                      |
  | [`broadcast_arguments`](#qiskit.providers.aer.library.SaveProbabilities.broadcast_arguments "qiskit.providers.aer.library.SaveProbabilities.broadcast_arguments")(qargs, cargs) | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.providers.aer.library.SaveProbabilities.c_if "qiskit.providers.aer.library.SaveProbabilities.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.providers.aer.library.SaveProbabilities.copy "qiskit.providers.aer.library.SaveProbabilities.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.providers.aer.library.SaveProbabilities.inverse "qiskit.providers.aer.library.SaveProbabilities.inverse")()                                                 | Special case.                                                            |
  | [`is_parameterized`](#qiskit.providers.aer.library.SaveProbabilities.is_parameterized "qiskit.providers.aer.library.SaveProbabilities.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.providers.aer.library.SaveProbabilities.mirror "qiskit.providers.aer.library.SaveProbabilities.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.providers.aer.library.SaveProbabilities.qasm "qiskit.providers.aer.library.SaveProbabilities.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.providers.aer.library.SaveProbabilities.repeat "qiskit.providers.aer.library.SaveProbabilities.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.providers.aer.library.SaveProbabilities.reverse_ops "qiskit.providers.aer.library.SaveProbabilities.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`soft_compare`](#qiskit.providers.aer.library.SaveProbabilities.soft_compare "qiskit.providers.aer.library.SaveProbabilities.soft_compare")(other)                             | Soft comparison between gates.                                           |
  | [`validate_parameter`](#qiskit.providers.aer.library.SaveProbabilities.validate_parameter "qiskit.providers.aer.library.SaveProbabilities.validate_parameter")(parameter)       | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                                                                    |                                                                               |
  | -------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.providers.aer.library.SaveProbabilities.decompositions "qiskit.providers.aer.library.SaveProbabilities.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.providers.aer.library.SaveProbabilities.definition "qiskit.providers.aer.library.SaveProbabilities.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.providers.aer.library.SaveProbabilities.duration "qiskit.providers.aer.library.SaveProbabilities.duration")                   | Get the duration.                                                             |
  | [`params`](#qiskit.providers.aer.library.SaveProbabilities.params "qiskit.providers.aer.library.SaveProbabilities.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.providers.aer.library.SaveProbabilities.unit "qiskit.providers.aer.library.SaveProbabilities.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.providers.aer.library.SaveProbabilities.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.providers.aer.library.SaveProbabilities.assemble" name="assemble" signature="assemble()">
    Return the QasmQobjInstruction for the intructions.
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.library.SaveProbabilities.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.providers.aer.library.SaveProbabilities.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.providers.aer.library.SaveProbabilities.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.providers.aer.library.SaveProbabilities.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.providers.aer.library.SaveProbabilities.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.providers.aer.library.SaveProbabilities.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.providers.aer.library.SaveProbabilities.inverse" name="inverse" signature="inverse()">
    Special case. Return self.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.providers.aer.library.SaveProbabilities.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### mirror

  <Function id="qiskit.providers.aer.library.SaveProbabilities.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.providers.aer.library.SaveProbabilities.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### qasm

  <Function id="qiskit.providers.aer.library.SaveProbabilities.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.providers.aer.library.SaveProbabilities.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.providers.aer.library.SaveProbabilities.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.providers.aer.library.SaveProbabilities.soft_compare" name="soft_compare" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  ### unit

  <Function id="qiskit.providers.aer.library.SaveProbabilities.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.providers.aer.library.SaveProbabilities.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

